--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -139,11 +139,13 @@ This yields $\sigma_{ts} = 8 \pi r_0^2 /3 = 0.665 \si{\barn}$, the total Thomson
 \subsubsection{Scattering from a single atom}
 
 As we have seen the main scatterer for Thomson scattering is the electron.
-The scattering of the incident beam from an atom is therfore proportional to the electronic density $\rho_{atom}(\vec{r})$.
+Each atom can be described as a small volume $d^3\vec{r}$ in the electronic density, and the scattered field by the superposition of the contribution from the electronic cloud surrounding the atoms.
+
+The scattering of the incident beam from an atom is therefore proportional to the electronic density $\rho_{atom}(\vec{r})$.
 For a single atom of atomic number $Z$ we have :
 
 \begin{equation}
-    \int \rho_{atom} (\vec{r}) d\vec{r} = Z
+    \int \rho_{atom} (\vec{r}) d^3\vec{r} = Z
 \end{equation}
 
 The scattering amplitude shows a dependance depending on the wavelength of the incident beam $\lambda$, and on the direction of detection defined by the scattering angle $2\theta$ between the wavevector of the incident photon $\vec{k_i}$ and the wavevector of the scattered photon $\vec{k_s}$ (fig. \ref{fig:q}).
@@ -151,22 +153,27 @@ The scattering amplitude shows a dependance depending on the wavelength of the i
 \begin{figure}[!htb]
     \centering
     \includegraphics[scale=0.6]{Figures/introduction/q.pdf}
-    \caption{Geometry of the momentum transfer $\vec{q}$ in reciprocal space, $2\theta$ is the scattering angle.}
+    \caption{Geometry of the scattering vector $\vec{q}$ in reciprocal space, $2\theta$ is the scattering angle. The magnitude of the scattering vector can be derived with the angle $\theta$ that draws a line cutting $\vec{q}$ at $|\vec{q}|/2$.}
     \label{fig:q}
 \end{figure}
 
-This leads to the definition of the momentum transfer, $\vec{q}$, to describe the amplitude of a scattering event (eq. \ref{eq:Q}, fig. \ref{fig:q}).
+This leads to the definition of the scattering vector, $\vec{q}$, to describe the amplitude of a scattering event (eq. \ref{eq:Q}, fig. \ref{fig:q}).
 
 \begin{equation}
     \label{eq:Q}
-    \vec{q}=\vec{k_i}-\vec{k_s}=2|\vec{k}|\sin{\theta}=\frac{4\pi}{\lambda} \sin{\theta}
-\end{equation}{}
+    \vec{q}=\vec{k_i}-\vec{k_s}=2|\vec{k}|\sin{\theta}
+\end{equation}
+
+\begin{equation}
+    \label{eq:QSinTheta}
+    |\vec{q}| = \frac{4\pi}{\lambda} \sin{\theta}
+\end{equation}
 
 The phase difference between a wave scattered at a position $\vec{O}$ and a wave scattered at a position $\vec{O}+\vec{r}$ is equal to $(\vec{k_i} - \vec{k_s}).\vec{r} = \vec{q}.\vec{r}$ (fig. \ref{fig:q}).
-We assume here that the scattering event is elastic ($|\vec{k_i}|=|\vec{k_s}|$) and that the waves are plane waves parallel to each other when in the small scattering volume $dr$.
+We assume here that the scattering event is elastic ($|\vec{k_i}|=|\vec{k_s}|$) and that the waves are plane waves parallel to each other when in the small scattering volume $d^3\vec{r}$.
 
-A small volume $dr$ will have a contribution equal to $-r_0 \rho(\vec{r})dr$ to the scattered field with a phase $e^{i\vec{q}.\vec{r}}$.
-%Thus, the total scattering amplitude at $2\theta$ will be equal to the vector sum of the scattering amplitudes in this direction from all volume elements $dr$ in $\rho(\vec{r})$ taking into account the phases between them.
+A small volume $d^3\vec{r}$ will have a contribution equal to $-r_0 \rho(\vec{r})d^3\vec{r}$ to the scattered field with a phase $e^{i\vec{q}.\vec{r}}$.
+%Thus, the total scattering amplitude at $2\theta$ will be equal to the vector sum of the scattering amplitudes in this direction from all volume elements $d^3\vec{r}$ in $\rho(\vec{r})$ taking into account the phases between them.
 
 By integrating over the volume occupied by the atom we obtain the total contribution of an atom to the scattered field in the direction $2\theta$:
 
@@ -175,10 +182,11 @@ By integrating over the volume occupied by the atom we obtain the total contribu
     -r_0 \int \rho (\vec{r}) e^{i\vec{q}.\vec{r}} d\vec{r} = -r_0 f(\vec{q}) = -r_0 FT [\rho (\vec{r})]
 \end{equation}
 
-The scattering amplitude as a function of $\vec{q}$ is described by the atomic scattering factor $f(\vec{q})$, which is defined as the fourier transform of the electronic density $\rho(\vec{r})$. This hypothesis is at the basis of several techniques such as Bragg coherent diffraction imaging for which the use this hypothesis to compute the scattered amplitude from the fourier transform of the electronic density (sec. X).
+The scattering amplitude as a function of $\vec{q}$ is described by the atomic scattering factor $f(\vec{q})$, which is defined as the Fourier transform of the electronic density $\rho(\vec{r})$.
+This hypothesis is at the basis of several techniques such as Bragg coherent diffraction imaging for which we use Fourier transforms to compute the scattered amplitude (sec. X).
 
 The values for the atomic scattering factor can be calculated using tabulated coefficients (eq. \ref{eq:AtomicFormFactorTab}) available online \parencite{InterTablesOfCryst}.
-The intensity decreases with $\vec{q}$ as illustrated in figure \ref{fig:atomic_form_factor}.
+It decreases with $\vec{q}$ (or $\sin(\theta) / \lambda)$ as illustrated in figure \ref{fig:atomic_form_factor}.
 
 \begin{equation}
     \label{eq:AtomicFormFactorTab}
@@ -198,216 +206,202 @@ This difference in scattering intensity between elements becomes crucial when wo
     \label{fig:atomic_form_factor}
 \end{figure}
 
-\subsection{Scattering from atoms and molecules}
+\subsection{Scattering from crystals}
 
-In the case of multiple atoms, each atom can be described as a small volume $dr$ in the electronic density, and the scattered field by the superposition of the contribution from the electronic cloud surrounding the atoms.
+A crystal is a solid material composed of a regular, repeating arrangement of atoms, ions, or molecules (i.e. a pattern), exhibiting a highly ordered structure with long-range periodicity in three dimensions.
 
-%The intensity of the scattered beam is proportionnal to the
+A Bravais lattice refers to an infinite array of points (nodes) that represents the basic repeating unit of a crystal lattice, defining the translational symmetry of the crystal structure.
+It is characterized by a set of three basis vectors and their linear combinations, which generate the entire lattice when translated in space.
+The \textit{primitive} unit cell is the smallest cell with which you can describe the crystal.
 
-%As seen in Equation (\ref{eq:scatt_thomson_scat_length}), the Thomson scattering length is inversely proportional to the mass of the particle, while the scattering cross-section is proportional to the square of the Thomson scattering length.
-%Hence the nucleus contributes less than one part in a million to the scattering amplitude and can be completely ignored.
-%The charge distribution is therefore equal to the electronic density.
+The structure of the Bravais lattice (cubic, hexagonal, ...) combined with the position of the patterns in the lattice and the symmetry relations between them defines the crystal \textit{space group}.
+In total there exist 230 space group in crystallography.
+In the simplest case the pattern consists of a single atom, for example pure Platinum (Z=78) cristallizes at room temperature in a cubic Bravais lattice (fig. \ref{fig:fcc}).
 
+We can define the scattering factor $F_{crystal}$ of the crystal by the sum of the atomic scattering factor of each atom present in the crystal: \textcolor{Important}{why}
 
+\begin{equation}
+    F_{crystal} = \sum_j^{N_{atom}} f_j(\vec{q}) e^{i\vec{q}.\vec{r}_j}
+\end{equation}
 
+$f_j(\vec{q})$ is the atomic scattering factor of the $j$-ieth atom at position $\vec{r}_j$ in a crystal made of $N_{atom}$ atoms.
+The Thomson scattering length is left apart for simplicity.
 
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/drawing/blender/FCC.png}
+    \caption{Face centered cubic (FCC) lattice of Pt (space group 225). Atoms are represented as solid balls and situated on the corners, at the middle of the faces, and at the center of the cube. The lattice parameter at room temperature is $\vec{a} = 3.9254 \AA$. Close packed direction is achieved along the diagonal of the lateral faces, thee distance between the atoms then becomes is $2.71 \si{\angstrom}.$}
+    \label{fig:fcc}
+\end{figure}
 
+The position of any atom in the crystal $\vec{r}_j$ is equal to the sum of the position of the unit cell $\vec{R}_{uc}$ plus the position of the atom within the unit cell $\vec{r}_j$.
+For a crystals made of $N_{uc}$ unit cells each composed of $N_{atoms}$ we have:
 
+\begin{equation}
+    F_{crystal} = \sum_j^{N_{atoms}} f_j(\vec{q}) e^{i\vec{q}.\vec{r}_j} \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R_k}}
+    \label{eq:Fcrystal}
+\end{equation}
 
+% As seen in Equation (\ref{eq:scatt_thomson_scat_length}), the Thomson scattering length is inversely proportional to the mass of the particle, while the scattering cross-section is proportional to the square of the Thomson scattering length.
+% Hence the nucleus contributes less than one part in a million to the scattering amplitude and can be completely ignored.
+% The charge distribution is therefore equal to the electronic density.
 
+% When detecting the scattered field at a point $\vec{R}$, we assume that $\|vec{R}|$ is far greater than the electronic density, this is called the dipole approximation. NOT GOOD Each atom can be considered as a ball of certain radius (see \ref{fcc_lattice}).
 
+% Furthermore, we assume that the source and detector are sufficiently far from the charge distribution so that the incident and scattered X-rays may be represented as plane waves, parallel to each other and perpendicular to the direction of propagation. % also more easily described
+%This is the so-called far-field limit or the fraunhofer region.
 
+% Finally, we assume that the charge distribution is small and that the scattering is weak so that the sample can be treated as a simple "perturbation" to the incident beam resulting in a linear problem \parencite{NielsenMcMorrow} and that the Born approximation is valid.
 
-
-%When detecting the scattered field at a point $\vec{R}$, we assume that $\|vec{R}|$ is far greater than the electronic density, this is called the dipole approximation. NOT GOOD Each atom can be considered as a ball of certain radius (see \ref{fcc_lattice}).
-
-Furthermore, we assume that the source and detector are sufficiently far from the charge distribution so that the incident and scattered X-rays may be represented as plane waves, parallel to each other and perpendicular to the direction of propagation. % also more easily described
-This is the so-called far-field limit or the fraunhofer region.
-
-In the scattering direction defined by the angle $2\theta$ between $k_f$ and $k_i$
-
-
-Finally, we assume that the charge distribution is small and that the scattering is weak so that the sample can be treated as a simple "perturbation" to the incident beam resulting in a linear problem \parencite{NielsenMcMorrow} and that the Born approximation is valid.
-
-Working under these assumption is known as kinematic diffraction for which we can easily derive the intensity of the scattered photons. We therefore ignore multiple-scattering of photons inside the sample and xxx. This is correct when working with low incident angles and penetration depths as for example in surface X-ray diffraction (see Section x).
-
-
-
+% Working under these assumption is known as kinematic diffraction for which we can easily derive the intensity of the scattered photons.
+% We therefore ignore multiple-scattering of photons inside the sample and xxx.
+% This is correct when working with low incident angles and penetration depths as for example in surface X-ray diffraction (see Section x).
 
 % only valid in far-field, faunhofer region
 % DWBA
 % dipole approximation
 
-\subsection{Coherence}
-
-
-
-\subsection{Bragg's Law}
-
-The lattice of our crystal is defined by three vectors $\vec{a},\ \vec{b},\ \vec{c}$. Any vector $\vec{v}$ of the unit cell can then be created by a linear combination of these three vectors:
+The Bravais lattice is defined by three basis vectors $\vec{a},\ \vec{b},\ \vec{c}$ and three angles $\alpha$ [$\angle (\vec{b}, \vec{c})$] , $\beta$ [$\angle (\vec{a}, \vec{c})$] and $\gamma$ [$\angle (\vec{a}, \vec{b})$].
+Any vector $\vec{R_k}$ describing the position of a node in the real space can be created by a linear combination of these three vectors:
 
 \begin{equation}
-    \vec{v}=n_1\vec{a} + n_2\vec{b} + n_3\vec{c}, \quad with \ (n_1,n_2,n_3) \in \mathbb{Z}^3
-\end{equation}{}
+    \label{eq:R_k}
+    \vec{R_k}=n_1\vec{a} + n_2\vec{b} + n_3\vec{c}, \quad \ (n_1,n_2,n_3) \in \mathbb{Z}^3
+\end{equation}
 
-the volume of the unit cell is:
-
-\begin{equation}
-    V=\vec{a}.(\vec{b}\times \vec{c})
-\end{equation}{}
-
-An important tool of crystallography is the \textit{reciprocal space} of dimension $m^{-1}$, defined by the three vectors $\vec{a*},\ \vec{b*},\ \vec{c*}$:
+To understand the contribution of the second sum in eq. \ref{eq:Fcrystal}, it is convenient to introduce the \textit{reciprocal space} which is the Fourier transform of the real space.
+It is defined by three basis vectors $\vec{a*},\ \vec{b*},\ \vec{c*}$.
+Similarly, the nodes of the reciprocal space can be accessed from its origin by a linear combination $\vec{G}$ of these three vectors.
 
 \begin{equation}
     \vec{a^*}=\frac{2\pi}{V}(\vec{b}\times \vec{c}), \qquad
     \vec{b^*}=\frac{2\pi}{V}(\vec{c}\times \vec{a}), \qquad
-    \vec{c^*}=\frac{2\pi}{V}(\vec{a}\times \vec{b})
-\end{equation}{}
-
-$\vec{q}$ can be written as a linear combination of the reciprocal length between planes.
-\begin{equation}
-    \label{eq:QandD}
-    \vec{Q} = n\frac{2\pi}{d_{hkl}}, \qquad with \ n \in \mathbb{Z}
-\end{equation}{}
-
-Combining \eqref{eq:QandSin} and \eqref{eq:QandD}, we fall back on the most famous equation of crystallography, Bragg law:
-
-\begin{equation}
-    \label{eq:Bragglaw}
-    n\lambda = 2d_{hkl} \sin{\theta}
+    \vec{c^*}=\frac{2\pi}{V}(\vec{a}\times \vec{b}), \qquad
+    \vec{a}_i . \vec{a}_j^* = \delta_{i,j}
 \end{equation}
 
-To summarize, a Bragg peak result from the constructive interference between coherently scattered waves at discrete values of the incident angle $2\theta$ or of the momentum transfer $\vec{q}$ on a specific set of crystalline planes. $\vec{q}$ and $2\theta$ are linked through \eqref{eq:QandSin}. The condition to have constructive interference is known as Bragg law and is given by \eqref{eq:Bragglaw}.
+\begin{equation}
+    \label{eq:G}
+    \vec{G}=h\vec{a}^* + k\vec{b}^* + l\vec{c}^*, \quad \ (h,k,l) \in \mathbb{Z}^3
+\end{equation}
 
-From \eqref{eq:QandD}, one can define the general reciprocal-space metric tensor for any crystalline system:
-
-\begin{gather}
-    \frac{(2\pi)^2}{d_{hkl}^2} = h^2 \, (\Vec{a^*}.\Vec{a^*}) + k^2 \,
-    \label{eq:dsquare}(\Vec{b^*}.\Vec{b^*}) + l^2 \, (\Vec{c^*}.\Vec{c^*}) + 2hk \, (\Vec{a^*}.\Vec{b^*}) + 2hl \, (\Vec{a^*}.\Vec{c^*}) + 2kl \, (\Vec{b^*}.\Vec{c^*})\\
-     \frac{(2\pi)^2}{d_{hkl}^2} = h^2 \, {a^*}^2 + k^2 \, {b^*}^2 + l^2 \, {c^*}^2 + 2hk \, {a^*}.{b^*}\cos{\gamma^*} + 2hl \, {a^*}.{c^*}\cos{\beta^*} + 2kl \, {b^*}.{c^*}\cos{\alpha^*}\\
-     \frac{(2\pi)^2}{d_{hkl}^2} = Ah^2 + Bk^2 + Cl^2 + Dhk + Ehl + Fkl
-     \label{eq:RecSpaceMetricTensor}
-\end{gather}{}
-
-Equation \eqref{eq:dsquare} can be simplified as \eqref{eq:Interplanarspacing} for a simple cubic system, defining the interplanar spacing between the crystalline planes:
+By combining eq. \ref{eq:R_k} and eq. \ref{eq:G} we find that the solution to the second sum in eq. \ref{eq:Fcrystal}, i.e. to the equation $\vec{q}.\vec{R_k} = n \times 2\pi$ $(\ n \in \mathbb{Z})$ is to write $\vec{q}$ as a linear combination of the reciprocal space vectors, i.e. as $\vec{G}$.
 
 \begin{equation}
-    \label{eq:Interplanarspacing}
-    d_{hkl}=\frac{2\pi}{|\vec{a^*}|\sqrt{h^2 + k^2 + l^2}}=\frac{|\vec{a}|}{\sqrt{h^2 + k^2 + l^2}}
-\end{equation}{}
+    \label{eq:LaueCond}
+    \vec{G} . \vec{R_k} = hn_1 + kn_2 + ln_3 = n \quad  with \ n \in \mathbb{Z}
+\end{equation}
 
-Moreover, for each peak, indexed by its \textit{hkl} miller indices that specify the orientation of the crystalline planes, the momentum transfer can be written as a linear combination of reciprocal space vectors, for a cubic lattice:
+This is also known as the Laue condition, that ensures that only certain scattering vectors, corresponding to the reciprocal lattice points, fulfill the condition for constructive interference between the scattered waves.
+These specific scattering vectors determine scattering direction and angle of the peaks observed in a diffraction pattern, also known as Bragg peaks.
 
-\begin{figure}[H]
+\begin{equation}
+    \vec{q} = \vec{G}  = h\vec{a}^* + k\vec{b}^* + l\vec{c}^*
+\end{equation}
+
+\subsection{Bragg's Law}
+
+The intensity scattered from a crystal as a function of the scattering vector $\vec{q}$ provides information about the arrangement and spacing of crystalline planes perpendicular to $\vec{q}$.
+The Miller indices are a set of integers used to represent the planes' orientation and spacing.
+A plane denoted by the ($h, k, l$) indices intercepts the axes $\vec{a}$, $\vec{b}$, $\vec{c}$ on the points $|\vec{a}|/h, |\vec{b}|/k, |\vec{c}|/l$.
+The direction perpendicular to the $(hkl)$ plane is written as $[hkl]$, the distance between each plane is $d_{hkl}$.
+
+\begin{figure}[!htb]
     \centering
     \includegraphics[scale=0.6]{Figures/introduction/BraggLaw.pdf}
-    \caption{Geometry of the momentum transfer $\vec{q}$ in reciprocal space, $2\theta$ is the scattering angle.}
+    \caption{The difference in the path length between plane waves scattered at an angle $\theta$ must be an integer multiple of wavelengths for constructive interference to occur.}
     \label{fig:BraggLaw}
 \end{figure}
 
-The figure \ref{fig:Q} leads to \eqref{eq:QandSin} and illustrates the particular case of a Bragg peak. If the momentum transfer $\vec{q}$ can be expressed as a linear combination of reciprocal vectors, here graphically verified, a Bragg peak occurs for this value of Q.
+A Bragg peak results from the constructive interference between coherently scattered waves at discrete values of the incident angle $2\theta$ on a specific set of crystalline planes.
+From fig. \ref{fig:BraggLaw} we can retrieve the condition to have constructive interference, also known as Bragg law and given by eq. \eqref{eq:Bragglaw}.
 
 \begin{equation}
-    \label{eq:Qhkl}
-    \vec{Q_{hkl}} = h\vec{a*} + l\vec{b*} + k\vec{c*}
-\end{equation}{}
-
-\subsection{Intensity of a Bragg peak}
-Neglecting absorption, the intensity of a Bragg peak $I_{nuc}$ as a function of its miller indices \textit{hkl} and of $2\theta$ can be written as:
-
-\begin{equation}
-    \label{eq:PeakIntensity}
-    I_{nuc} = A \times |F_{hkl}|^2  \times j_{hkl} \times L(2\theta) \times \exp{(-2W)}
+    \label{eq:Bragglaw}
+    n\lambda = 2d_{hkl} \sin{\theta}, \quad \ n \in \mathbb{Z}
 \end{equation}
-where A is an instrument constant.
 
-\subsubsection{Structure factor}
-$F_{hkl}$ is known as the structure factor, it is given by:
+% \begin{gather}
+%     \frac{(2\pi)^2}{d_{hkl}^2} = h^2 \, (\Vec{a^*}.\Vec{a^*}) + k^2 \,
+%     \label{eq:dsquare}(\Vec{b^*}.\Vec{b^*}) + l^2 \, (\Vec{c^*}.\Vec{c^*}) + 2hk \, (\Vec{a^*}.\Vec{b^*}) + 2hl \, (\Vec{a^*}.\Vec{c^*}) + 2kl \, (\Vec{b^*}.\Vec{c^*})\\
+%      \frac{(2\pi)^2}{d_{hkl}^2} = h^2 \, {a^*}^2 + k^2 \, {b^*}^2 + l^2 \, {c^*}^2 + 2hk \, {a^*}.{b^*}\cos{\gamma^*} + 2hl \, {a^*}.{c^*}\cos{\beta^*} + 2kl \, {b^*}.{c^*}\cos{\alpha^*}\\
+%      \frac{(2\pi)^2}{d_{hkl}^2} = Ah^2 + Bk^2 + Cl^2 + Dhk + Ehl + Fkl
+%      \label{eq:RecSpaceMetricTensor}
+% \end{gather}{}
+
+In the case of a cubic Bravais lattice, the distance between Miller planes can be written as:
+\begin{equation}
+    \label{eq:Interplanarspacing}
+    d_{hkl}=\frac{2\pi}{|\vec{a^*}|\sqrt{h^2 + k^2 + l^2}}=\frac{|\vec{a}|}{\sqrt{h^2 + k^2 + l^2}}
+\end{equation}
+
+From eq. \ref{eq:QSinTheta}, eq. \ref{eq:Bragglaw} we fall back on the Laue condition which is a generalization of Bragg law. The diffraction order ($n$) in the Bragg's law equation can be omitted since it is implicitly determined by the Miller indices (hkl) representing the crystalline planes involved in the diffraction.
+
+\begin{gather}
+    \label{eq:QandD}
+    |\vec{Q}| = \frac{4\pi \sin(\theta)}{\lambda},\\
+    \sin(\theta) / \lambda = \frac{1}{2d_{hkl}},\\
+    |\vec{Q}| = \frac{2\pi}{d_{hkl}}
+\end{gather}{}
+
+When fulfilling the Laue (or Bragg) condition, the direction of the scattering vector is perpendicular to the crystalline planes represented by the ($h, k, l$) Miller indices, and its magnitude is inversely proportional to the distance between consecutive crystalline planes.
+
+\subsection{Structure factor}
+
+On one hand, in real space, the crystal electronic density can be formed by repeating the unit cell at each lattice point, i.e. it can be represented as a convolution of the lattice and unit cell functions.
+%The electronic density $\vec{r}$ is formed by repeating the lattice function at each lattice point and adding the basis function associated with that lattice point.
+This representation captures the periodicity and arrangement of the crystal.
+
+On the other hand, in reciprocal space (Fourier space), the crystal scattering factor $F_{crystal}$ is the Fourier transform of the electronic density.\textcolor{Important}{why}
+According to the convolution theorem, the Fourier transform of a convolution is equal to the product of the Fourier transforms of the individual functions.
+The scattering factor can therefore be expressed as the product of the Fourier transforms of the lattice and unit cell functions.
+These Fourier transforms are known as the lattice sum $F_{lat}$ and the unit cell structure factor $F_{uc}$.
+
+\begin{equation}
+    F_{crystal} = FT[\rho(\vec{r})] = F_{uc} * F_{lat}
+    \label{eq:FcrystalFlatFuc}
+\end{equation}
+
+The lattice sum $F_{lat}$ represents the periodic arrangement of the crystal lattice in Fourier space, corresponding to the reciprocal lattice.
+It determines the positions and intensities of the diffraction peaks in the scattering pattern.
+The unit cell structure factor $F_{uc}$ describes the distribution of electron density within the unit cell of the crystal and modulates the scattered beam amplitude depending on what atoms are in the unit cell (amplitude) and their positions (phase).
+
+Each diffraction peak in the scattering pattern corresponds to a specific Fourier component, representing a sinusoidal wave of electron density with a particular frequency and direction determined by its position ($(h, k, l)$ values) in Fourier space.
+
+By knowing the phase relationships between these Fourier components, which can be obtained from the measured diffraction pattern, the electron density within the unit cell can be reconstructed.
+The superposition of these sinusoidal waves, representing the diffraction peaks or Fourier components, recreates the original electron density distribution of the crystal.
+
+To summarize, the diffraction peaks in the scattering pattern represent the Fourier components of the crystal's electron density distribution, and their spatial frequencies and phase relationships carry information about the crystal structure.
+%The first sum is the unit cell structure factor, that modulates the scattered beam amplitude depending on what atoms are in the unit cell (amplitude) and their positions (phase).
+%The second sum is the lattice factor that takes the value of $N_{uc}$ if $\vec{q}.\vec{R_k} = n \times 2\pi$ $(\ n \in \mathbb{Z})$.
+
+By identifying the different parts of eq. \ref{eq:Fcrystal} and eq. \ref{eq:FcrystalFlatFuc} we can first isolate the structure factor:
+
 \begin{equation}
     \label{eq:StrucFactor}
-    F_{hkl} = \sum_{j=0}^n b_j \exp{(-2\pi i \vec{Q}. \vec{r_{j0}})}
-\end{equation}{}
+    F_{uc} = \sum_j^{N_{atoms}} f_j(\vec{q}) e^{i\vec{q}.\vec{r}_j}
+\end{equation}
 
-The structure factor is the summation of the contribution to the scattering energy of each atoms at the position $\vec{r_{j0}}$ of scattering length $b_j$ in our unit cell for a given $\vec{Q}$.
-The position of the atom $\vec{r_{j0}}$ is given by:
+The structure factor is the summation of the contribution of each atom at the position $\vec{r}_j$ of atomic form factor $f(\vec{q})$ in the unit cell for a given $\vec{q}$.
+The position of the atom $\vec{r}_j$ is given by:
 
 \begin{equation}
     \label{eq:AtomPos}
-    \vec{r_{j0}} = x_j\vec{a} + y_j\vec{b} + z_j\vec{c}
+    \vec{r}_j = x_j\vec{a} + y_j\vec{b} + z_j\vec{c}
 \end{equation}
 
-\subsubsection{Debye-Waller factor}
+\subsection{Lattice factor}
 
-The position $\vec{r_j}$ of the atom j is not static but should be rather understood as the instantaneous position of the atom. In a crystal, atoms vibrate around their equilibrium position $\vec{r_{j0}}$, we have:
 
-\begin{equation}
-    \vec{r_j}(t)=\vec{r_{j0}} + \vec{u}(t)
-\end{equation}{}
+\subsection{Coherence}
 
-$\vec{u} = \vec{u}(t)$ is the thermal displacement, accounting for thermal vibrations in the crystal. These oscillations around the equilibrium position can be understood following the model of a harmonic oscillator at low temperature, with discrete frequencies of vibrations. The frequency of the vibrations, that increase with temperature, are linked to quasi-particles named \textit{phonons}.
-Another contribution to the thermal displacement is the zero-point displacement, if one could lower the temperature of the crystal in a perfect vacuum down to absolute zero, one would have expected the system to not show any motion. However, quantum physics tells us that even at absolute zero there is a probability for the atom to not be in at its equilibrium position, called zero-point displacement.
-Moreover, the Debye-Waller factor also takes into account the static displacement in the lattice that is linked to disorder. This will be discusses further in chapter 2.
 
-The exponential in \eqref{eq:StrucFactor} can be rewritten as:
+\textit{
+So far we have limited ourselves to the kinematical approach of diffraction in the frame of this thesis.
+This means that multiple scattering and effect of absorption and refraction are ignored during diffraction.
+This is justified for Surface X-ray diffraction by the fact that the incoming angle is very low ($\approx 0.3$) and for BCDI by the low volume of the sample ($\approx 0.1 \mu m^3$).
+}
 
-\begin{equation}
-    \exp{(-2\pi i \vec{Q}.\vec{r_j})} = \exp{(\ -2\pi i \vec{Q}.(\vec{r_{j0}} + \vec{u})\ )}
-\end{equation}{}
+\textcolor{Important}{Field / amplitude / intensity consistent ? $r_0$ use consistent ? Where to mention that here we are using several hypothesis (Born approximation, DWBA, dipole), real crystals, fourier tranform, convolution}
 
-The average of this equation is given by:
-
-\begin{equation}
-    \langle \exp{(-2\pi i \vec{Q}.\vec{r_j})} \rangle= \exp{(-2\pi i \vec{Q}.\vec{r_{j0}})} \times \langle \exp{(\ -2\pi i \vec{Q}.\vec{u})\ }\rangle
-\end{equation}{}
-
-The second term of this expression can be expanded as the second order Taylor series for $\exp{x_0}$ with $x_0 = -2\pi i \vec{Q}.\vec{u}$ at zero, we loose the $(2\pi)$ for clarity:
-
-\begin{equation}
-    \langle \exp{(- i \vec{Q}.\vec{u})}\rangle = 1 - \langle \ i \vec{Q}.\vec{u} \ \rangle - \frac{1}{2} \langle \ (\vec{Q}.\vec{u})^2 \ \rangle + o \ ( \ \langle \ (\vec{Q}.\vec{u})^2 \ \rangle \ )
-\end{equation}
-
-Since the displacement are random, the average of $i \vec{Q}.\vec{u}$ is equal to zero. However the average of the square of $\vec{Q}.\vec{u}$ is non zero and can be further developed as:
-
-\begin{equation}
-    \langle \ (\vec{Q}.\vec{u})^2 \ \rangle = Q^2 \ \langle \ u^2 \ \rangle \  \langle \ \cos{\theta}^2 \ \rangle = \frac{1}{3} \  Q^2 \ \langle \ u^2 \ \rangle
-\end{equation}{}
-
-which leads to:
-
-\begin{equation}
-    \langle \exp{(- i \vec{Q}.\vec{u})}\rangle = 1 - \frac{1}{6} \ Q^2 \ \langle \ u^2 \ \rangle
-\end{equation}
-
-that corresponds to the first order Taylor series for $\exp{x_0}$ with $x_0 = \frac{1}{6} \ q^2 \ \langle \ u^2 \ \rangle $ at zero, we can write:
-
-\begin{equation}
-    \label{eq:DWFroot}
-    1 - \frac{1}{6} \ Q^2 \ \langle \ u^2 \ \rangle = \exp{( \frac{1}{6} \ Q^2 \ \langle \ u^2 \ \rangle \ )}
-\end{equation}
-
-The final intensity contribution of the Debye Waller factor is the square of \eqref{eq:DWFroot} given by:
-
-\begin{equation}
-    \label{eq:DWF}
-    \exp{( \frac{1}{3} \ Q^2 \ \langle \ u^2 \ \rangle \ )}
-\end{equation}
-
-The last two terms of \eqref{eq:PeakIntensity}, respectively $j_{hkl}$ and $L(2\theta)$ are the multiplicity of a Bragg peak and the Lorentz factor. They will be studied in a section covering the instrument used for powder diffraction for they both relate more to the collection of the data than to the theoretical intensity of a Bragg peak.
-
-\subsubsection{Lorentz factor}
-
-Explain here how we actually collect the data
-
-Ewald sphere is quite important here.
-
-\subsubsection{Multiplicity}
-
-Small introduction to space groups ?
-
-% \begin{figure}[!htb]
-%     \centering
-%     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/drawing/blender/FCC.png}
-%     \caption{FCC lattice of Pt. Close packed direction is achieved along the diagonal of the lateral faces. The distance between the atoms is $2.71 \si{\angstrom}.$}
-%     \label{fig:fcc_lattice}
-% \end{figure}
 
