--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -20,28 +20,7 @@ It is not clear that different detailed models of roughness could be distinguish
 \subsection{Reciprocal space mapping}
 
 
-\lipsum
-
-
-\subsection{Reflectively}
-
-
-\lipsum
-
-
-\subsection{Computer programs}
-
-
-\lipsum
-
-
-\subsubsection{RefNX}
-
-
-\lipsum
+\subsection{Reflectivety}
 
 
 \subsubsection{ROD}
-
-\lipsum
-
