--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -230,7 +230,7 @@ The Thomson scattering length is left apart for simplicity.
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/drawing/blender/FCC.png}
-    \caption{Face centered cubic (FCC) lattice of Pt (space group 225). Atoms are represented as solid balls and situated on the corners, at the middle of the faces, and at the center of the cube. The lattice parameter at room temperature is $\vec{a} = 3.9254 \AA$. Close packed direction is achieved along the diagonal of the lateral faces, thee distance between the atoms then becomes is $2.71 \si{\angstrom}.$}
+    \caption{Face centered cubic (FCC) lattice of Pt (space group 225). Atoms are represented as solid balls and situated on the corners and at the middle of the faces. The lattice parameter at room temperature is $\vec{a} = 3.9254 \AA$. Close packed direction is achieved along the diagonal of the lateral faces, thee distance between the atoms then becomes is $2.71 \si{\angstrom}.$}
     \label{fig:fcc}
 \end{figure}
 
@@ -309,7 +309,7 @@ The direction perpendicular to the $(hkl)$ plane is written as $[hkl]$, the dist
 \begin{figure}[!htb]
     \centering
     \includegraphics[scale=0.6]{Figures/introduction/BraggLaw.pdf}
-    \caption{The difference in the path length between plane waves scattered at an angle $\theta$ must be an integer multiple of wavelengths for constructive interference to occur.}
+    \caption{The difference in the path length between plane waves scattered at an angle $\theta$ must be an integer multiple of wavelengths for constructive interference to occur. NOT FINISHED}
     \label{fig:BraggLaw}
 \end{figure}
 
@@ -355,19 +355,18 @@ This representation captures the periodicity and arrangement of the crystal.
 On the other hand, in reciprocal space (Fourier space), the crystal scattering factor $F_{crystal}$ is the Fourier transform of the electronic density.\textcolor{Important}{why}
 According to the convolution theorem, the Fourier transform of a convolution is equal to the product of the Fourier transforms of the individual functions.
 The scattering factor can therefore be expressed as the product of the Fourier transforms of the lattice and unit cell functions.
-These Fourier transforms are known as the lattice sum $F_{lat}$ and the unit cell structure factor $F_{uc}$.
+These Fourier transforms are known as the lattice factor $F_{lat}$ and the unit cell structure factor $F_{uc}$.
 
 \begin{equation}
     F_{crystal} = FT[\rho(\vec{r})] = F_{uc} * F_{lat}
     \label{eq:FcrystalFlatFuc}
 \end{equation}
 
-The lattice sum $F_{lat}$ represents the periodic arrangement of the crystal lattice in Fourier space, corresponding to the reciprocal lattice.
+The lattice factor $F_{lat}$ represents the periodic arrangement of the crystal lattice in Fourier space, corresponding to the reciprocal lattice.
 It determines the positions and intensities of the diffraction peaks in the scattering pattern.
 The unit cell structure factor $F_{uc}$ describes the distribution of electron density within the unit cell of the crystal and modulates the scattered beam amplitude depending on what atoms are in the unit cell (amplitude) and their positions (phase).
 
-Each diffraction peak in the scattering pattern corresponds to a specific Fourier component, representing a sinusoidal wave of electron density with a particular frequency and direction determined by its position ($(h, k, l)$ values) in Fourier space.
-
+Each diffraction peak in the scattering pattern corresponds to a specific Fourier component, representing a sinusoidal wave of electron density with a particular frequency and direction determined by its scattering vector $\vec{q}$ i.e. by its position in Fourier space.
 By knowing the phase relationships between these Fourier components, which can be obtained from the measured diffraction pattern, the electron density within the unit cell can be reconstructed.
 The superposition of these sinusoidal waves, representing the diffraction peaks or Fourier components, recreates the original electron density distribution of the crystal.
 
@@ -382,16 +381,44 @@ By identifying the different parts of eq. \ref{eq:Fcrystal} and eq. \ref{eq:Fcry
     F_{uc} = \sum_j^{N_{atoms}} f_j(\vec{q}) e^{i\vec{q}.\vec{r}_j}
 \end{equation}
 
-The structure factor is the summation of the contribution of each atom at the position $\vec{r}_j$ of atomic form factor $f(\vec{q})$ in the unit cell for a given $\vec{q}$.
-The position of the atom $\vec{r}_j$ is given by:
+The structure factor is the summation of the contribution of each atom $j$ at the position $\vec{r}_j$ of atomic form factor $f_j(\vec{q})$ in the unit cell for a given scattering vector $\vec{q}$.
+The position of each atom is defined in the unit cell by eq. \ref{eq:AtomPos}, an example with the Platinum atoms in its primitive unit cell is given in tab. \ref{tab:PtAtoms}.
 
 \begin{equation}
     \label{eq:AtomPos}
     \vec{r}_j = x_j\vec{a} + y_j\vec{b} + z_j\vec{c}
 \end{equation}
 
+\begin{table}[!htb]
+    \centering
+    \begin{tabular}{@{}lllllllllllllll@{}}
+    \toprule
+    Atom & Pt & Pt & Pt & Pt & Pt  & Pt  & Pt  & Pt  & Pt  & Pt & Pt & Pt & Pt & Pt  \\ \midrule
+    x    & 0  & 1  & 0  & 1  & 0.5 & 0.5 & 0   & 0.5 & 1   & 0  & 1  & 0  & 1  & 0.5 \\
+    y    & 0  & 0  & 1  & 1  & 0.5 & 0   & 0.5 & 1   & 0.5 & 0  & 0  & 1  & 1  & 0.5 \\
+    z    & 0  & 0  & 0  & 0  & 0   & 0.5 & 0.5 & 0.5 & 0.5 & 1  & 1  & 1  & 1  & 1   \\ \bottomrule
+    \end{tabular}
+    \label{tab:PtAtoms}
+    \caption{Position of Platinum atoms in the face-centered cubic (FCC) unit cell. Illustrated in fig. \ref{fig:fcc}}
+\end{table}
+
+Systematic extinctions ($F_{uc} = 0$) occur when certain diffraction peaks are forbidden due to the crystal's symmetry elements, such as the atomic positions.
+For example in the FCC lattice of Platinum, systematic extinctions occur when the value of Miller indices are not all even or all odds.
+Otherwise, the intensity of a Bragg peak detected at the scattering vector $\vec{q}$ is equal to $4\times f_{Pt}(\vec{q})$ where $f_{Pt}(\vec{q})$ is the atomic scattering factor of Platinum.
+
 \subsection{Lattice factor}
 
+If the scattering factor considers the composition of the unit cell, the lattice factor represents the contribution of the crystal lattice to the overall scattering amplitude.
+It takes into account the arrangement of atoms or scatterers within the crystal lattice and their interaction with the incident wave.
+
+By identifying the different parts of eq. \ref{eq:Fcrystal} and eq. \ref{eq:FcrystalFlatFuc} we can now isolate the lattice factor (eq \ref{eq:LatFactor}).
+Instead of considering one sum over all the unit cells $N_{uc}$ in the crystal, we can work with the product of three sums, each in one of the three directions of the crystal lattice ($\vec{a}, \vec{b}, \vec{c}$) so that $N_{uc} = N_{uc, x} \times N_{uc, y} \times N_{uc, z}$.
+
+\begin{gather}
+    \label{eq:LatFactor}
+    F_{lat} = \sum_k^{N_{uc}} e^{i\vec{q}.\vec{R_k}} = \sum_{m_x}^{N_{uc, x}} e^{i m_x\vec{q}.\vec{a}} \times \sum_{m_y}^{N_{uc, y}} e^{i m_y\vec{q}.\vec{b}} \times \sum_{m_y}^{N_{uc, z}} e^{i m_y\vec{q}.\vec{c}},\\
+    \prod_{j=1}^3
+\end{gather}
 
 \subsection{Coherence}
 
@@ -402,6 +429,5 @@ This means that multiple scattering and effect of absorption and refraction are 
 This is justified for Surface X-ray diffraction by the fact that the incoming angle is very low ($\approx 0.3$) and for BCDI by the low volume of the sample ($\approx 0.1 \mu m^3$).
 }
 
-\textcolor{Important}{Field / amplitude / intensity consistent ? $r_0$ use consistent ? Where to mention that here we are using several hypothesis (Born approximation, DWBA, dipole), real crystals, fourier tranform, convolution}
-
-
+\textcolor{Important}{Field / amplitude / intensity consistent ? $r_0$ use consistent ? $2\pi$ ? Where to mention that here we are using several hypothesis (Born approximation, DWBA, dipole), real crystals, fourier tranform, convolution
+Define well}
